UtahLiveDataTest/src/objects/FundingSource__c.object
<CustomObject>
    <description>[Business] Details of the Funding sources which further creates Funding accounts</description>
    <fields>
        <fullName>AgencyFundTitle__c</fullName>
        <label>Agency Fund Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgencyFund__c</fullName>
        <label>Agency Fund</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppropriationFund__c</fullName>
        <label>Appropriation Fund</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvailableBalance__c</fullName>
        <label>Available Balance</label>
        <summarizedField>FundingAccount__c.AvailableAmount__c</summarizedField>
        <summaryForeignKey>FundingAccount__c.FundingSource__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AwardNumber__c</fullName>
        <description>Unique number of the Federal Award funding the sub-award.</description>
        <inlineHelpText>Unique number of the Federal Award funding the sub-award.</inlineHelpText>
        <label>Award Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BatchId__c</fullName>
        <label>Batch Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BudgetedAmount__c</fullName>
        <label>Budgeted Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CAN__c</fullName>
        <inlineHelpText>Common Accounting Number</inlineHelpText>
        <label>CAN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFDANumber__c</fullName>
        <description>(Catalog of Federal Domestic Assistance)
CFDA number of the federal program funding the sub-award.</description>
        <inlineHelpText>(Catalog of Federal Domestic Assistance)
CFDA number of the federal program funding the sub-award.</inlineHelpText>
        <label>CFDA Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFDATitle__c</fullName>
        <label>CFDA Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompSourceGrp__c</fullName>
        <label>Comp. Source Grp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DisableEdit__c</fullName>
        <formula>If(Text(Status__c) == &apos;Disapproved&apos;,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disable Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FAIN__c</fullName>
        <description>Federal Award Identification Number</description>
        <inlineHelpText>Federal Award Identification Number</inlineHelpText>
        <label>FAIN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FiscalYearShort__c</fullName>
        <formula>FiscalYear__r.Notes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Federal Fiscal Year</label>
        <referenceTo>FiscalYear__c</referenceTo>
        <relationshipLabel>Funding Sources</relationshipLabel>
        <relationshipName>FundingSources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FundedAmount__c</fullName>
        <label>Funded Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FundingSourceID__c</fullName>
        <label>ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FundingStatus__c</fullName>
        <label>Funding Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GrantTitle__c</fullName>
        <label>Grant Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant</label>
        <referenceTo>Grant__c</referenceTo>
        <relationshipLabel>Funding Sources</relationshipLabel>
        <relationshipName>Funding_Sources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GranteeHideEditAndDelete__c</fullName>
        <formula>OR(AND(Grant__c!=null,Grant__r.GranteeHideEditAndDelete__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GranteeHideEditAndDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideDelete__c</fullName>
        <formula>OR(ISPICKVAL(Status__c,&apos;Active&apos;),ISPICKVAL(Status__c,&apos;Inactive&apos;),ISPICKVAL(Status__c,&apos;Approved&apos;))</formula>
        <label>Hide Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditBtn__c</fullName>
        <description>Logic for Hiding Funding Sources</description>
        <formula>OR(AND(RecordType.DeveloperName=&apos;External&apos;, (Text(Status__c) != &apos;Created&apos;)),
   AND(RecordType.DeveloperName=&apos;Internal&apos;, (Text(Status__c) != &apos;Created&apos;))
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Logic for Hiding Funding Sources</inlineHelpText>
        <label>Hide Edit Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditDelete__c</fullName>
        <formula>NOT(ISPICKVAL(Status__c, &apos;Created&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideEditDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideGrantEditDelete__c</fullName>
        <formula>Grant__r.GranteeHideEditAndDelete__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideGrantEditDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NameTemplate__c</fullName>
        <formula>&apos;FS-&apos;+ IF(TEXT( Type__c )==&apos;Federal&apos;,&apos;FD&apos;,IF(TEXT( Type__c )==&apos;State&apos;,&apos;ST&apos;,&apos;NGO&apos;)) + &apos;-&apos;</formula>
        <label>Name Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofFundingAccounts__c</fullName>
        <label>Number of Funding Accounts</label>
        <summaryForeignKey>FundingAccount__c.FundingSource__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OrgCode__c</fullName>
        <label>Org Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgTitle__c</fullName>
        <label>Org Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationName__c</fullName>
        <label>Funding Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerAgencyCode__c</fullName>
        <description>Organizatin Code for the Internal/State Agency</description>
        <label>Owner Agency Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCA__c</fullName>
        <label>PCA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramCode__c</fullName>
        <label>Program Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Funding Sources</relationshipLabel>
        <relationshipName>Funding_Sources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReferenceNumber__c</fullName>
        <label>Reference #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RemainingAmount__c</fullName>
        <formula>SumofTotalAmountAllocated__c  -  Grant__r.TotalFundingSourceAllocatedAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unallocated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SpendPlan__c</fullName>
        <label>Spend Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contracts</fullName>
                </value>
                <value>
                    <fullName>Sub Awards</fullName>
                </value>
                <value>
                    <fullName>Internal Spends</fullName>
                </value>
                <value>
                    <fullName>ISA</fullName>
                </value>
                <value>
                    <fullName>Loans</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <formula>Grant__r.ExternalOrganization__r.Name</formula>
        <label>Sponsor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                    <label>Created</label>
                </value>
                <value>
                    <fullName>Submitted For Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SumofFundingAccountAllocated_Amount__c</fullName>
        <label>Sum of Funding Account Allocated Amount</label>
        <summarizedField>FundingAccount__c.SumOfBudgetCategories__c</summarizedField>
        <summaryForeignKey>FundingAccount__c.FundingSource__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SumofTotalAmountAllocated__c</fullName>
        <label>Sum of Total Amount Allocated</label>
        <summarizedField>FundingSourceBudgetCategory__c.TotalAmountAllocated__c</summarizedField>
        <summaryForeignKey>FundingSourceBudgetCategory__c.FundingSource__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalAllocatedAmount__c</fullName>
        <description>Total Allocated Amount of Federal budget Categories</description>
        <label>Total Allocated Amount</label>
        <summarizedField>FundingSourceBudgetCategory__c.AllocatedAmount__c</summarizedField>
        <summaryForeignKey>FundingSourceBudgetCategory__c.FundingSource__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalAllocationPercentage__c</fullName>
        <formula>(SumofTotalAmountAllocated__c  /  TotalAllocatedAmount__c) / 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Allocation Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TotalBudgetedAmount__c</fullName>
        <description>Total Amount that was budgeted</description>
        <label>Total Budgeted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Funder Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Federal</fullName>
                    <default>true</default>
                    <label>Federal</label>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>NGO</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnencumberedAmount__c</fullName>
        <formula>FundedAmount__c  -  TotalAllocatedAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unencumbered Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Funding Source</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funding Sources</pluralLabel>
    <recordTypes>
        <fullName>External</fullName>
        <active>true</active>
        <description>This is used in Grantee side of Applicaion</description>
        <label>External</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal</fullName>
        <active>true</active>
        <description>This is used in grantor side of Applicaion</description>
        <label>Internal</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>GeneralShare__c</fullName>
        <label>General Share</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>OwnerReplacement__c</fullName>
        <label>Owner Replacement</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>SharetoUsersinSameAccount__c</fullName>
        <label>Share to Users in Same Account</label>
    </sharingReasons>
    <validationRules>
        <fullName>AllocatedAmountshouldnotexceedFundAmount</fullName>
        <active>true</active>
        <description>Total Allocated Amount should not exceed Funded Amount.</description>
        <errorConditionFormula>If(NOT(ISNULL(FundedAmount__c)),TotalAllocatedAmount__c  &gt;  FundedAmount__c,false)</errorConditionFormula>
        <errorMessage>Allocated Amount Cannot Exceed Funded Amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StartEndDate</fullName>
        <active>true</active>
        <errorConditionFormula>StartDate__c  &gt;  EndDate__c</errorConditionFormula>
        <errorMessage>Start Date cannot be greater than End Date</errorMessage>
    </validationRules>
</CustomObject>